Split objects from configure file, improve Makefiles

--- a/libs/CriWare/Makefile
+++ b/libs/CriWare/Makefile
@@ -3,7 +3,7 @@ CRIWARE_FILES :=\
 	$(BUILD_DIR)/libs/CriWare/src/sofdec/libmwsfdwii.a\
 
 #CriWare doesn't use the sdata sections
-$(CRIWARE_FILES): CFLAGS += -sdata 0 -sdata2 0 -Cpp_exceptions off
+$(CRIWARE_FILES): CFLAGS += -sdata 0 -sdata2 0 -use_lmw_stmw on -func_align 4
 
 $(CRIWARE_FILES): INCLUDES += -i libs/CriWare/src/
 
