--- a/libs/RVL_SDK/Makefile
+++ b/libs/RVL_SDK/Makefile
@@ -36,7 +36,7 @@ RVL_SDK_FILES:=\
 #Wii SDK uses 4.3 build 145, but the 1.1 version (4.3 build 151) seems close enough so far.
 
 #All the functions in the Wii SDK except for bte are aligned to 16 bytes, so this is necessary.
-$(RVL_SDK_FILES): CFLAGS = -Cpp_exceptions off -enum int -inline auto -ipa file -proc gekko -fp hard -O4,p -nodefaults -func_align 16 $(INCLUDES)
+$(RVL_SDK_FILES): CFLAGS += -inline auto -ipa file -fp_contract off -func_align 16 $(INCLUDES)
 
 #USB uses pooling?
 
