--- a/libs/NdevExi2A/Makefile
+++ b/libs/NdevExi2A/Makefile
@@ -3,7 +3,7 @@ NDEV_FILES:=\
 	$(BUILD_DIR)/libs/NdevExi2A/src/exi2.o\
 
 $(NDEV_FILES): INCLUDES += -i libs/NdevExi2A/include/
-$(NDEV_FILES): CFLAGS += -inline auto -ipa file -func_align 4 $(INCLUDES)
+$(NDEV_FILES): CFLAGS += -inline auto -ipa file -func_align 4
 #Ndev uses GC 3.0
 $(NDEV_FILES): MWCC_VERSION := 3.0a5.2
 $(NDEV_FILES): CONSOLE := GC
