More symbol porting madness

--- a/config/eu/config.yml
+++ b/config/eu/config.yml
@@ -4,5 +4,5 @@ symbols: config/eu/symbols.txt
 splits: config/eu/splits.txt
 
 mw_comment_version: 15
-symbols_known: false
+symbols_known: true
 fill_gaps: true
