--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
 	},
     "files.insertFinalNewline": true,
     "files.associations": {
-        "*.cp": "cpp",
+        "*.cp": "cpp"
     },
     "search.useIgnoreFiles": false,
     "search.exclude": {
