Update dtk stuff (build fails for now)

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,14 @@
 __pycache__
-.vscode/c_cpp_properties.json
-
-# game files
-orig/*/*
-!orig/SOUE01/README.md
-!orig/*/.gitkeep
-
-# ninja stuff
+.idea
+.vscode
+.ninja_*
+.mypy_cache
+*.exe
 build
 build.ninja
-.ninja_deps
-.ninja_log
-
-# tools
-tools/dtk
-tools/mwcc_compiler/*
-!tools/mwcc_compiler/.gitkeep
-/tools/objdiff.exe
-
 objdiff.json
+orig/*/*
+!orig/*/.gitkeep
+/*.txt
 ctx.c
 .DS_Store
