--- a/config/eu/config.yml
+++ b/config/eu/config.yml
@@ -1,4 +1,5 @@
-object: orig/eu/sys/main.dol
+object_base: orig/eu
+object: sys/main.dol
 hash: 10d34dbf901e5d6547718176303a6073ee80dda2
 symbols: config/eu/symbols.txt
 splits: config/eu/splits.txt
